cluster/longhorn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-service
  namespace: longhorn
spec:
  ports:
  - port: 8000

  selector:
    app: longhorn-service
