cluster/longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-route
  namespace: longhorn
  annotations:
    k8s-dns.nathanv.me/hostname: longhorn.nathanv.app
    k8s-dns.nathanv.me/external: tunnel.nathanv.app
    k8s-dns.nathanv.me/internal: reverse-proxy.svc.nathanv.home
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`longhorn.nathanv.app`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
    middlewares:
    - name: authentik-forward-auth
      namespace: authentik
  tls:
    certResolver: le
    domains:
    - sans:
      - "*.nathanv.app"
